<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/_10dp"
    android:paddingHorizontal="@dimen/_15dp"
    android:paddingVertical="@dimen/_15dp"
    android:background="@drawable/search_drawable"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="2dp"
        android:paddingHorizontal="@dimen/_15dp"
        android:paddingVertical="@dimen/_10dp"
        android:background="@drawable/search_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_app"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/simple_to_use_first_step_open_the_youtube_second_copy_the_video_url_third_paste_video_url_to_app_search_bar"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_drawer"
        android:elevation="2dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        android:paddingVertical="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_is_not_working"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp"
             android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backarrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_app_is_not_working_then_please_connect_me_pankajkm347_gmail_com"
            android:textAlignment="textStart"
            android:layout_marginTop="@dimen/_5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/watchTutorial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/search_drawer"
            android:elevation="2dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_5dp"
            android:text="@string/contact"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>