<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DataKeyWords"
    android:background="@color/white5">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cancelall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:src="@drawable/baseline_cancel_24"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:backgroundTint="@color/color_selector"
            android:elevation="5dp"
            android:fontFamily="@font/comfortaa_medium"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copyall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:backgroundTint="@color/color_selector"
            android:elevation="3dp"
            android:fontFamily="@font/comfortaa_medium"
            android:text="@string/copy_all"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selecall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:backgroundTint="@color/color_selector"
            android:elevation="3dp"
            android:fontFamily="@font/comfortaa_medium"
            android:text="@string/select_all"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/tags_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"  />

</androidx.constraintlayout.widget.ConstraintLayout>