<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.VideoDetail"
    android:id="@+id/swipeRefresh">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/search_drawable"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/icon_search"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/late_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_video_url"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/selected_color"
                android:textColorHint="@color/gray1"
                android:textCursorDrawable="@drawable/cursor"
                android:textFontWeight="400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/search_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_drawer"
                android:elevation="@dimen/_3dp"
                android:ellipsize="end"
                android:fontFamily="@font/comfort_medium"
                android:paddingHorizontal="8dp"
                android:paddingVertical="3dp"
                android:singleLine="true"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_edit_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:ellipsize="end"
            android:fontFamily="@font/late_regular"
            android:maxLines="1"
            android:paddingVertical="@dimen/_3dp"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            tools:text="@string/please_enter_the_url" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/middle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/watchTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_drawable"
                android:ellipsize="end"
                android:fontFamily="@font/late_regular"
                android:paddingHorizontal="@dimen/_10dp"
                android:paddingVertical="@dimen/_10dp"
                android:singleLine="true"
                android:text="@string/how_to_use_app"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sp"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_demo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_demo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gotoYoutube"
                app:layout_constraintStart_toEndOf="@+id/watchTutorial"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gotoYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_drawable"
                android:ellipsize="end"
                android:fontFamily="@font/late_regular"
                android:paddingHorizontal="@dimen/_10dp"
                android:paddingVertical="@dimen/_10dp"
                android:singleLine="true"
                android:text="@string/goto_youtube"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sp"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_demo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middle_layout" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10dp"
            android:paddingStart="@dimen/_15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_view_container"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/demo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/bangers"
                android:letterSpacing="0.1"
                android:lineHeight="20sp"
                android:maxLines="2"
                android:text="@string/see_all_the_trending_videos"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintBottom_toTopOf="@+id/hr_recycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hr_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:visibility="visible"
                android:paddingEnd="@dimen/_65dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/demo" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/noData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/demo"
                android:text="@string/refresh_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
