<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white4"
    tools:context=".Fragments.KeywordS">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="@dimen/_10dp"
        android:background="@drawable/search_drawable"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/icon_search"
            android:drawablePadding="@dimen/_3dp"
            android:elevation="5dp"
            android:ellipsize="end"
            android:hint="@string/search_keywords_like_cricket"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5dp"
            android:paddingVertical="@dimen/_10dp"
            android:textColor="@color/selected_tab_color"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/voiceImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/voiceImg"
            android:layout_width="@dimen/_24dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5dp"
            android:background="@drawable/search_drawer"
            android:paddingVertical="@dimen/_3dp"
            android:paddingHorizontal="@dimen/_2dp"
            android:src="@drawable/voice"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_btn"
            app:layout_constraintStart_toEndOf="@+id/search_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@drawable/search_drawer"
            android:ellipsize="end"
            android:fontFamily="@font/comfort_medium"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_3dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/voiceImg"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:ellipsize="end"
        android:fontFamily="@font/late_regular"
        android:maxLines="1"
        android:paddingVertical="@dimen/_3dp"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_linear"
        tools:text="@string/please_enter_the_url" />

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText" />
</androidx.constraintlayout.widget.ConstraintLayout>